src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>IP_Purchase_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IP Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interested_in_Volunteering_for__c</fullName>
        <label>Interested in Volunteering for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Media/educational events</fullName>
                </value>
                <value>
                    <fullName>VSP Mobile Eyes</fullName>
                </value>
                <value>
                    <fullName>Television interviews</fullName>
                </value>
                <value>
                    <fullName>Interviews for print articles</fullName>
                </value>
                <value>
                    <fullName>Radio interviews</fullName>
                </value>
                <value>
                    <fullName>Client health/benefit fairs</fullName>
                </value>
                <value>
                    <fullName>Focus groups</fullName>
                </value>
                <value>
                    <fullName>Pilot programs</fullName>
                </value>
                <value>
                    <fullName>Presentations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsFromVFPage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used for Relocate function purposes</description>
        <label>IsFromVFPage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Lens_Date__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Indicates the date of the last claim for contact lenses.</inlineHelpText>
        <label>Last Contact Lens Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Lens_Network__c</fullName>
        <description>Last Contact Lens Network field is displayed on the Consumer Contacts record in the Vision Care information section.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Contact Lens Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Exam_Date__c</fullName>
        <description>The last exam date the Subscriber had with the Client at the time of the data pull.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Last Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Exam_Network__c</fullName>
        <description>Indicates if the Subscriber’s exam claim was in or out of network.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Last Exam Network</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Glasses_Date__c</fullName>
        <description>Done=Last Glasses Date field is displayed on the Consumer Contacts record in the Vision Care information section.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Indicates the date of the last claim for glasses (L, F, or LF).</inlineHelpText>
        <label>Last Glasses Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Glasses_Network__c</fullName>
        <description>Done=Last Glasses Network field is displayed on the Consumer Contacts record in the Vision Care information section.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Glasses Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Survey_Sent__c</fullName>
        <description>Hidden field to help prevent duplicate surveys.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source - Most Recent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marchon_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact wants to opt-out of Marchon&apos;s marketing communications.</description>
        <inlineHelpText>Contact wants to opt-out of Marchon&apos;s marketing communications.</inlineHelpText>
        <label>Marchon Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marchon_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact wants to opt-out of Marchon&apos;s general communications.</description>
        <inlineHelpText>Contact wants to opt-out of Marchon&apos;s general communications.</inlineHelpText>
        <label>Marchon Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marchon_Score__c</fullName>
        <description>The score indicates interaction and profile strength for Marchon.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Marchon Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The contact&apos;s name used for Marketing Campaigns.</inlineHelpText>
        <label>Marketing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_ID_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare ID Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months_Since_Last_Exam__c</fullName>
        <label>Months Since Last Exam</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDA_Sign_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NDA Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <description>National Provider Indicator for a Vision Care Doctor.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>National Provider Indicator for a Vision Care Doctor.</inlineHelpText>
        <label>NPI</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Email_Address_Added__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Email Address Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Recred_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Recred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Credentialing__c</fullName>
        <label>Non Standard Credentialing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credential - VSP</fullName>
                </value>
                <value>
                    <fullName>Credential - Gemini</fullName>
                </value>
                <value>
                    <fullName>Delegated Credential - Davis</fullName>
                </value>
                <value>
                    <fullName>Delegated Credential - NVI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Exam_Claims__c</fullName>
        <inlineHelpText>Count of Paid Eye Exam Claims since 4 years from the Coverage End Date</inlineHelpText>
        <label>Number of Exam Claims</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offered_IP_Opportunity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Offered IP Opportunity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Optics_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact wants to opt-out of Optic&apos;s marketing communications.</description>
        <inlineHelpText>Contact wants to opt-out of Optic&apos;s marketing communications.</inlineHelpText>
        <label>Optics Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optics_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact wants to opt-out of Optic&apos;s general communications.</description>
        <inlineHelpText>Contact wants to opt-out of Optic&apos;s general communications.</inlineHelpText>
        <label>Optics Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optics_Score__c</fullName>
        <description>The score indicates interaction and profile strength for Optics.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Optics Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The contacts other email address.</inlineHelpText>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Persona</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <description>The contacts email address.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The contacts email address.</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>Extension of the contact phone number.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Extension of the contact phone number.</inlineHelpText>
        <label>Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication__c</fullName>
        <description>The contacts preferred Method of communication.</description>
        <inlineHelpText>Self reported Preferred method of communication by contact.</inlineHelpText>
        <label>Preferred Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Doctor_ID_1__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Previous Doctor ID 1</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Doctor_ID_2__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Previous Doctor ID 2</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Effective_Date_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Effective Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Effective_Date_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Effective Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_End_Date_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous End Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_End_Date_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous End Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Channel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Purchase Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_A_M_P__c</fullName>
        <formula>HYPERLINK(&quot;https://vsp.retailcloud.net/core/root/index.cfm?pageId=publish#75&quot;, &quot;Connect to R.A.M.P.&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R.A.M.P</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_IP__c</fullName>
        <label>Reason for IP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Employer dropping coverage</fullName>
                </value>
                <value>
                    <fullName>Leaving Company</fullName>
                </value>
                <value>
                    <fullName>Cobra Ending</fullName>
                </value>
                <value>
                    <fullName>Dependent age-out</fullName>
                </value>
                <value>
                    <fullName>Shopping for a family member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_in_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recruitment in Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <description>18 digit Salesforce ID of Contact. Not case-sensitive.</description>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_on_Behalf__c</fullName>
        <formula>HYPERLINK(&quot;https://www.eyeconic.com/on/demandware.store/Sites-eyeconic-Site/default/CC_Customer-Details?Login=&quot;&amp; Eyeconic_Login_Email__c ,&quot;Customer Account&quot; ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shop on Behalf</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Program_Participation__c</fullName>
        <label>Special Program Participation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LTC - Long Term Care Facility Provider</fullName>
                </value>
                <value>
                    <fullName>MOBIL - Mobile Clinic Interest</fullName>
                </value>
                <value>
                    <fullName>Long Term Care Facility Provider</fullName>
                    <isActive>false</isActive>
                    <label>Long Term Care Facility Provider</label>
                </value>
                <value>
                    <fullName>Mobile Clinic Interest</fullName>
                    <isActive>false</isActive>
                    <label>Mobile Clinic Interest</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specializes_in_Hard_to_fit_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specializes in Hard-to-fit Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specializes_in_Low_Vision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specializes in Low Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specializes_in_Vision_Therapy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specializes in Vision Therapy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialty_Board_Award_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specialty Board Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specialty_Board_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specialty Board Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specialty_Board_Lifetime_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specialty Board Lifetime Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialty_Board_Status__c</fullName>
        <label>Specialty Board Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Board Certified</fullName>
                </value>
                <value>
                    <fullName>Not Certified - Pending</fullName>
                </value>
                <value>
                    <fullName>Not Certified - SPA</fullName>
                </value>
                <value>
                    <fullName>Not Certified - Grace Extension Granted</fullName>
                </value>
                <value>
                    <fullName>Certification Expired - Extension Granted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty_Board_Type__c</fullName>
        <label>Specialty Board Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of Contact.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Coverage_End_Date__c</fullName>
        <description>Actual date the Subscriber’s coverage ended (through midnight) with the most recent Group coverage; might be a mid-month date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber Coverage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPS_Return_Label__c</fullName>
        <formula>HYPERLINK(&quot;https://www.campusship.ups.com/cship/create?ActionOriginPair=CreateAReturn___StartSession&amp;loc=en_US&quot;, &quot;UPS Return Label&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPS Return Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VC__c</fullName>
        <description>Used to display Vision Care Providers in the Contact Search Results.</description>
        <formula>IF( Vision_Care_Effective_Date__c &lt;= TODAY() &amp;&amp; (Vision_Care_End_Date__c &gt;=TODAY() || ISBLANK(Vision_Care_End_Date__c)) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSP_Global_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact wants to opt-out of Global&apos;s marketing communications.</description>
        <inlineHelpText>Contact wants to opt-out of Global&apos;s marketing communications.</inlineHelpText>
        <label>VSP Global Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSP_Global_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact wants to opt-out of Global&apos;s general communications.</description>
        <inlineHelpText>Contact wants to opt-out of Global&apos;s general communications.</inlineHelpText>
        <label>VSP Global Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSP_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VSP Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSP_Network_Provider_Count__c</fullName>
        <formula>IF(Vision_Care_Network_Provider__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VSP Network Provider Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSP_Term_Reason_Code__c</fullName>
        <description>Formula field used in outbound message data integration displaying the Vision Care Term Reason Code in plain text.</description>
        <formula>Vision_Care_Term_Reason__r.Name</formula>
        <label>VSP Term Reason Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Doctor_Exception__c</fullName>
        <label>Vision Care Doctor Exception</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABO - Not ABO Certified</fullName>
                </value>
                <value>
                    <fullName>AWP - Willing Provider State</fullName>
                </value>
                <value>
                    <fullName>CAD1 - Consent Agreement - NM</fullName>
                </value>
                <value>
                    <fullName>CAD2 - Consent Agreement - A&amp;H</fullName>
                </value>
                <value>
                    <fullName>CAD3 - Consent Agreement - SIU</fullName>
                </value>
                <value>
                    <fullName>CAD4 - Consent Agreement - promo</fullName>
                </value>
                <value>
                    <fullName>CED1 - Legal Approved - 2002</fullName>
                </value>
                <value>
                    <fullName>CED2 - Legal Approved - 2006</fullName>
                </value>
                <value>
                    <fullName>CED3 - Legal Approved - 2009</fullName>
                </value>
                <value>
                    <fullName>DEC - Covering for Deceased Owner Dr.</fullName>
                </value>
                <value>
                    <fullName>GAP - GAP eClaim Capability</fullName>
                </value>
                <value>
                    <fullName>GRF - Grandfather</fullName>
                </value>
                <value>
                    <fullName>LEV - Maternity Leave/Sabbatical</fullName>
                </value>
                <value>
                    <fullName>INS - Insufficient Insurance Coverage</fullName>
                </value>
                <value>
                    <fullName>LFU - Not Fully DPA/TPA Licensed</fullName>
                </value>
                <value>
                    <fullName>TFH - Alleged contract violation/investigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Care_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Care Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Care_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Care End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact wants to opt-out of Vision Care&apos;s marketing communications.</description>
        <inlineHelpText>Contact wants to opt-out of Vision Care&apos;s marketing communications.</inlineHelpText>
        <label>Vision Care Marketing-Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Marketing_General__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contacts want to opt-out of Vision Care&apos;s general communications.</description>
        <inlineHelpText>Contacts want to opt-out of Vision Care&apos;s general communications.</inlineHelpText>
        <label>Vision Care Marketing-General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Network_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provides services for Vision Care.</description>
        <inlineHelpText>Provides services for Vision Care.</inlineHelpText>
        <label>Vision Care Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Primary_Location_Key__c</fullName>
        <formula>Account.Vision_Care_Location_Key__c</formula>
        <label>Vision Care Primary Location Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Provider_Advocate__c</fullName>
        <inlineHelpText>VSP Board Member and/or Providers’ that advocate on VSP behalf</inlineHelpText>
        <label>Vision Care Provider Advocate</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current Board Member</fullName>
                </value>
                <value>
                    <fullName>Former Board Member</fullName>
                </value>
                <value>
                    <fullName>Former Committee Member</fullName>
                </value>
                <value>
                    <fullName>Former QA Representative</fullName>
                </value>
                <value>
                    <fullName>Former Professional Representative</fullName>
                </value>
                <value>
                    <fullName>Current Committee Member</fullName>
                </value>
                <value>
                    <fullName>Current QA Representative</fullName>
                </value>
                <value>
                    <fullName>Current Professional Representative</fullName>
                </value>
                <value>
                    <fullName>High Profile Doctor</fullName>
                    <isActive>false</isActive>
                    <label>High Profile Doctor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Care_Relationship_Type_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Based on Active Location Relationships</inlineHelpText>
        <label>Vision Care Relationship Type(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Score__c</fullName>
        <description>The score indicates interaction and profile strength for Vision Care.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This score indicates interaction and profile strength. Profile strength ranges from A-D with A being the highest. The interaction score ranges from 1-4 with 1 being the highest.</inlineHelpText>
        <label>Vision Care Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Term_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision Care Term Reason</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>General_Table__c.Table__c</field>
                <operation>equals</operation>
                <value>PRS6</value>
            </filterItems>
            <filterItems>
                <field>General_Table__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>General_Table__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts1</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Client_Name__c</columns>
        <columns>CONTACT.IS_PERSON_ACCOUNT</columns>
        <filterScope>Everything</filterScope>
        <label>*All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>D2C_Contact_Records</fullName>
        <columns>FULL_NAME</columns>
        <columns>Other_Email__c</columns>
        <columns>CONTACT.ADDRESS1_STREET</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <columns>CONTACT.ADDRESS1_ZIP</columns>
        <columns>Client_ID__c</columns>
        <columns>Client_Status__c</columns>
        <columns>Client_Strategic_Business_Unit__c</columns>
        <columns>Client_Termination_Date__c</columns>
        <columns>IP_Purchase_Date__c</columns>
        <columns>Adjusted_Subscriber_Coverage_End_Date__c</columns>
        <columns>Subscriber_Coverage_End_Date__c</columns>
        <columns>Subscriber_Status__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Consumer</value>
        </filters>
        <filters>
            <field>D2C_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>D2C Contacts</label>
    </listViews>
</CustomObject>